--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-unsloth[rocm]>=2024.6
+# unsloth[rocm]>=2024.6
 trl>=0.9.4
 peft>=0.11.1
 transformers>=4.41.2
 accelerate>=0.31.0
 datasets>=2.18.0
 
-bitsandbytes>=0.43.1
+#bitsandbytes>=0.43.1
 
 wandb
 huggingface_hub
